Modul 3 lesson 7 fixed promo__item--7 on mobile version

--- a/CRM-ShopOnline/css/promo.css
+++ b/CRM-ShopOnline/css/promo.css
@@ -333,7 +333,7 @@
   }
 
   .promo__item--7 {
-    grid-row: -1;
+    grid-row: 8;
   }
 
   .promo__item--1 {
